# safeguards

./: .gitignore  404.html  README.md  app.py  chat_app.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  rxconfig.py  test.ipynb  test.py  train.py
.github/workflows/: deploy.yml  publish.yml  tests.yaml
application_pages/: chat_app.py  evaluation_app.py  intro_page.py  llama_guard_fine_tuning.py  train_classifier.py
benchmarks/: secrets_benchmark.py
docs/: index.md  llm.md  metrics.md  regex_model.md  train_classifier.md  utils.md
docs/assets/: sampled_dataset.csv
docs/guardrails/: base.md  manager.md  privilege_escalation.md  secrets_detection.md  sourcecode_detection.md
docs/guardrails/entity_recognition/: entity_recognition_guardrails.md  llm_judge_entity_recognition_guardrail.md  presidio_entity_recognition_guardrail.md  regex_entity_recognition_guardrail.md  transformers_entity_recognition_guardrail.md
docs/guardrails/prompt_injection/: classifier.md  llama_prompt_guardrail.md  llm_guardrail.md  llm_survey.md
docs/train/: train_classifier.md  train_llama_guard.md
guardrails/base/: index.html
guardrails/entity_recognition/entity_recognition_guardrails/: index.html
guardrails/entity_recognition/llm_judge_entity_recognition_guardrail/: index.html
guardrails/entity_recognition/presidio_entity_recognition_guardrail/: index.html
guardrails/entity_recognition/regex_entity_recognition_guardrail/: index.html
guardrails/entity_recognition/transformers_entity_recognition_guardrail/: index.html
guardrails/manager/: index.html
guardrails/privilege_escalation/: index.html
guardrails/prompt_injection/classifier/: index.html
guardrails/prompt_injection/llm_guardrail/: index.html
guardrails/secrets_detection/: index.html
guardrails/sourcecode_detection/: index.html
guardrails_genie/: llm.py  metrics.py  regex_model.py  train_classifier.py  utils.py
guardrails_genie/guardrails/: __init__.py  base.py  manager.py
guardrails_genie/guardrails/entity_recognition/: __init__.py  llm_judge_entity_recognition_guardrail.py  presidio_entity_recognition_guardrail.py  regex_entity_recognition_guardrail.py  transformers_entity_recognition_guardrail.py
guardrails_genie/guardrails/injection/: __init__.py  classifier_guardrail.py  llama_prompt_guardrail.py  llm_guardrail.py  protectai_guardrail.py  survey_guardrail.py
guardrails_genie/guardrails/pii/: presidio_pii_guardrail.py  regex_pii_guardrail.py  run_presidio_model.py  run_regex_model.py  run_transformers.py  transformers_pipeline_guardrail.py
guardrails_genie/guardrails/privilege_escalation/: README.md  __init__.py  dataset_prep.ipynb  llm_dataset_creation.py  priv_esc_guardrail.py  priv_esc_guardrails.py
guardrails_genie/guardrails/secrets_detection/: __init__.py  secrets_detection.py  secrets_patterns.jsonl
guardrails_genie/guardrails/sourcecode_detection/: __init__.py  (+1 more)
guardrails_genie/train/: __init__.py  llama_guard.py  train_classifier.py
llm/: index.html
metrics/: index.html
prompts/: injection_paper_1.md
regex_model/: index.html
safeguards/: __init__.py  metrics.py  pages.py  safeguards.py  utils.py
safeguards/app/: navbar.py  settings.py  state.py  tailwind.py
safeguards/components/: __init__.py  navbar.py  playground.py  settings.py
safeguards/guardrails/: __init__.py  base.py
safeguards/meta_evaluation/: __init__.py  evaluation_classification.py  trace_parser.py  trace_utils.py
safeguards/state/: __init__.py  app.py  playground.py  settings.py
safeguards/train/: llama_guard.py  train_classifier.py
search/: search_index.json
tests/: test_evaluation_classification.py  test_privilege_escalation.py  test_prompt_injection_classifier.py  test_prompt_injection_llm.py  test_secrets_detection.py  test_sourcecode_detection.py
train/train_classifier/: index.html
train/train_llama_guard/: index.html
utils/: index.html
(+54 files in other folders)
