[project]
name = "guardrails-genie"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai>=0.8.3",
    "openai>=1.52.2",
    "isort>=5.13.2",
    "black>=24.10.0",
    "ruff>=0.6.9",
    "pip>=24.2",
    "uv>=0.4.20",
    "weave @ git+https://github.com/wandb/weave@feat/eval-progressbar",
    "streamlit>=1.40.1",
    "python-dotenv>=1.0.1",
    "watchdog>=6.0.0",
    "firerequests>=0.1.1",
    "pymupdf4llm>=0.0.17",
    "transformers>=4.46.3",
    "torch>=2.5.1",
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.1.0",
    "hypothesis>=6.122.1"
]

[tool.setuptools]
py-modules = ["guardrails_genie"]
