[project]
name = "guardrails-genie"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.1.0",
    "evaluate>=0.4.3",
    "google-generativeai>=0.8.3",
    "openai>=1.52.2",
    "weave @ git+https://github.com/wandb/weave@feat/eval-progressbar",
    "streamlit>=1.40.1",
    "python-dotenv>=1.0.1",
    "watchdog>=6.0.0",
    "transformers>=4.46.3",
    "torch>=2.5.1",
    "instructor>=1.7.0",
    "diskcache>=5.6.3",
    "matplotlib>=3.9.3",
    "plotly>=5.24.1",
    "scikit-learn>=1.5.2",
    "sqlparse>=0.5.2",
]

[project.optional-dependencies]
presidio = [
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
]
dev = [
    "isort>=5.13.2",
    "black>=24.10.0",
    "ruff>=0.6.9",
    "pip>=24.2",
    "uv>=0.4.20",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
    "mkdocs-material>=9.5.39",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-jupyter>=0.25.0",
    "jupyter>=1.1.1",
]
test = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.1.0",
    "hypothesis>=6.122.1"
]

[tool.setuptools]
py-modules = ["guardrails_genie"]
