[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "safeguards"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.1.0",
    "detect-secrets>=1.5.0",
    "evaluate>=0.4.3",
    "google-generativeai>=0.8.3",
    "hyperscan>=0.7.8",
    "openai>=1.52.2",
    "weave>=0.51.25",
    "streamlit>=1.40.1",
    "python-dotenv>=1.0.1",
    "watchdog>=6.0.0",
    "transformers>=4.46.3",
    "instructor>=1.7.0",
    "diskcache>=5.6.3",
    "matplotlib>=3.9.3",
    "plotly>=5.24.1",
    "scikit-learn>=1.5.2",
    "sqlparse>=0.5.2",
    "python-fasthtml>=0.10.2",
    "MonsterUI>=0.0.11",
    "sqlite-minutils>=4.0.3",
    "mistletoe>=1.4.0",
    "lxml>=5.3.0",
]

[project.optional-dependencies]
presidio = [
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
]

secrets = [
    "gibberish-detector>=0.1.1",
    "detect-secrets>=1.5.0",
    "hyperscan>=0.7.8"
]

dev = [
    "isort>=5.13.2",
    "black>=24.10.0",
    "ruff>=0.6.9",
    "pip>=24.2",
    "uv>=0.5.11",
    "pytest>=8.3.4",
    "hypothesis>=6.122.5",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
    "mkdocs-material>=9.5.39",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-jupyter>=0.25.0",
    "jupyter>=1.1.1",
]
test = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.1.0",
    "hypothesis>=6.122.1"
]

[tool.setuptools]
py-modules = ["safeguards"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
filterwarnings = "ignore::DeprecationWarning"
